--- a/CaloriesWeb/meals/templates/meals/mealItem.html
+++ b/CaloriesWeb/meals/templates/meals/mealItem.html
@@ -1,7 +1,7 @@
 
 <tr class="meal-item">
-    <th class="meal-name"> <a href="meal/{{ meal.id }}">{{ meal.name }} </a> </th>
-    <th class="meal-grams"> {{ meal.grams }} grams </th>
+    <td class="meal-name"> <a href="meal/{{ meal.id }}">{{ meal.name }} </a> </td>
+    <td class="meal-grams"> {{ meal.grams }} grams </td>
     {% comment %} <th class="meal-recipe-header"> Recipe </th> {% endcomment %}
     {% comment %} <th class="meal-link-header"> Recipe Link </th> {% endcomment %}
 </tr>
