--- a/CaloriesWeb/main/static/main/css/main.css
+++ b/CaloriesWeb/main/static/main/css/main.css
@@ -1,25 +1,53 @@
 body{
     background-color: rgb(252, 255, 242);
-    margin: auto;
-    /* border: 5px solid black; */
-    /* border-radius: 10px; */
-    /* width: 60%; */
-    /* padding: 20px; */
+    /* margin: auto;
     display: flex;
     flex-direction: row;
-    /* align-items: center; */
-    justify-content: center;
+    align-items: center;
+    justify-content: center; */
 }
 
-main{
-    background-color: rgb(255, 230, 230);
+header{
+    background-color: rgb(255, 204, 229);
     border: 2px solid black;
-    border-radius: 10px;
-    width: 80%;
-    padding: 20px;
-    margin-right: 20px;
+    border-radius: 20px;
+    width: auto;
+    margin-left: 20px;
     margin-top: 10px;
     margin-bottom: 10px;
+    margin-right: 20px;
+    text-align: center;
+}
+
+header table{
+    width: 100%;
+}
+
+header table tr{
+    align-items: center;
+}
+
+header table th h1{
+    color: black;
+    padding-left: 20px;
+    text-decoration: none;
+    width: fit-content;
+}
+
+
+header table th a{
+    text-decoration: none;
+}
+
+header table th a span{
+    width: fit-content;
+    padding-right: 20px;
+    color: black;
+    transition: transform 0.6s ease;
+}
+header table th a span:hover, header table th a:hover, header table th h1:hover{
+    color: rgb(204, 0, 255);
+    text-decoration: none;
 }
 
 aside{
@@ -27,7 +55,7 @@ aside{
     background-color: rgb(228, 255, 250);
     /* background-color: rgb(0, 255, 208); */
     border: 2px solid black;
-    border-radius: 10px;
+    border-radius: 20px 0 0 20px;
     width: 20%;
     padding: 2.5%;
     margin-left: 20px;
@@ -55,11 +83,50 @@ aside ul a{
     text-decoration: none;
 }
 
-.food-item {
-    border: 1px solid black;
-    border-radius: 5px;
-    padding: 10px;
+main{
+    margin: 0;
+}
+
+main.log-main{
+    float: center;
+    background-color: rgb(255, 230, 230);
+    border: 2px solid black;
+    border-radius: 20px 20px 20px 20px;
+    width: 50%;
+    padding: 2.5%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
     margin-bottom: 10px;
+}
+main.log-main .log-main-content input
+{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    
+}
+
+main .main-content{
+    float: left;
+    background-color: rgb(255, 230, 230);
+    border: 2px solid black;
+    border-radius: 0 20px 20px 0;
+    width: 75%;
+    padding: 2.5%;
+    margin-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.food-items {
+    border: 1px solid black;
+    border-radius: 15px;
+    width: fit-content;
 }
 
 /* .food-item table {
@@ -67,7 +134,7 @@ aside ul a{
     width: 100%;
 } */
 
-.food-item table th {
+.food-items table th, .food-items table td {
     padding: 5px;
     text-align: left;
     border: 1px solid black;
@@ -77,7 +144,7 @@ aside ul a{
 /* .meals-list table {
     width: 100%;
 } */
-.meals-list table th {
+.meals-list table th, .meals-list table td {
     width: 20%;
     padding: 8px;
     text-align: left;
