--- a/CaloriesWeb/meals/templates/meals/foodItem.html
+++ b/CaloriesWeb/meals/templates/meals/foodItem.html
@@ -1,13 +1,10 @@
-<div class="food-item">
-    <table>
-        <tr>
-            <th class="food-name"> {{ food.name }} </th>
-            <th class="food-type"> {{ food.type }} </th>
-            <th class="food-grams"> {{ food.grams }} grams </th>
-            <th class="food-calories"> {{ food.calories }} kcal </th>
-            <th class="food-protein"> {{ food.protein }} g protein </th>
-            <th class="food-carbs"> {{ food.carbs }} g carbs </th>
-            <th class="food-fats"> {{ food.fats }} g fats </th>
-        </tr>
-    </table>
-</div>
+
+<tr style="width: 10%;">
+    <td > {{ food.name }} </td>
+    <td > {{ food.type }} </td>
+    <td > {{ food.grams }} g </td>
+    <td > {{ food.calories }} kcal</td>
+    <td > {{ food.protein }} g</td>
+    <td > {{ food.carbs }} g</td>
+    <td > {{ food.fats }} g</td>
+</tr>
