--- a/CaloriesWeb/main/templates/main/layout.html
+++ b/CaloriesWeb/main/templates/main/layout.html
@@ -17,6 +17,12 @@
                 <th style="text-align: left;">
                     <a href="{% url 'home' %}"><h1>Calories Tracker</h1></a>
                 </th>
+                <th>
+                    <form action="{% url 'search' %}" method="get">
+                        <input type="text" name="q" placeholder="Search...">
+                        <button type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    </form>
+                </th>
                 <th style="text-align: right;">
                     {% if user.is_authenticated %}
                         <a href="#"><span>{{ user.username }}</span></a>
